Use Beacon transport for Google Analytics

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-D2QP4YRN1N');
+    gtag('config', 'G-D2QP4YRN1N', { transport_type: 'beacon' });
   </script>
 </head>
 
